--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 description = ""
 authors = ["Blackpossum <yosaphatharwindra@gmail.com>"]
 
+
 [tool.poetry.dependencies]
 python = "^3.10"
 Flask = "^3.0.2"
 poetry-dotenv-plugin = "^0.2.0"
+Flask-SQLAlchemy = "^3.1.1"
+psycopg2 = "^2.9.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
