--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Flask = "^3.0.2"
 poetry-dotenv-plugin = "^0.2.0"
 Flask-SQLAlchemy = "^3.1.1"
 psycopg2 = "^2.9.9"
+flask-migrate = "^4.0.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
