--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,15 @@ Flask = "^3.0.2"
 poetry-dotenv-plugin = "^0.2.0"
 Flask-SQLAlchemy = "^3.1.1"
 psycopg2 = "^2.9.9"
+pymysql = "^1.1.0"
+cryptography = "^42.0.2"
 flask-migrate = "^4.0.5"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^8.0.1"
+pytest-cov = "^4.1.0"
+pytest-mock = "^3.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
